fix: improve loading state management in Dropzone component and adjust gap size in styles

--- a/src/components/inputs/dropzone/dropzone.scss
+++ b/src/components/inputs/dropzone/dropzone.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: var(--size-small);
+  gap: var(--size-xxsmall);
   cursor: default;
   outline: dashed 1px var(--figma-color-border);
   border-radius: var(--border-radius-med);
